@@ -288,20 +288,21 @@ anarchy_length_percent = 100
 ; Add perfume to an improvement or unit type to encourage the AI to build it more often. When choosing what to buld, the AI computes a point value for
 ; each of its options and the mod will add the perfume amount to the point total for each named option. For reference, point values are often in the
 ; hundreds for the most desirable options. You can see the point value the AI gives to every available build by pressing P while viewing one of its
-; cities.
+; cities. Perfume amounts can also be specified as a percentage, ex. a perfume amount of 15% will increase the AI's evaluation by 15% and an amount of
+; -50% will reduce it by half.
 ; production_perfume is a list of names and amounts, each one looks like "name": amount
-; Here's an example: ["Granary": 15, "Colosseum": -20, "Courthouse": 30]
+; Here's an example: ["Granary": 15, "Colosseum": -20%, "Courthouse": 30]
 ; The quotation marks around a name are not necessary if the name is all one word (i.e. does not include spaces) and is made up of only letters,
 ; digits (0-9), periods, hyphens, or underscores. The category of letters includes the normal English a-z and A-Z as well as accented variants
 ; (e.g. ä, ö, ñ, ç) and all other non-English letters available in the Windows-1252 encoding (e.g. ß, þ, æ).
 production_perfume = []
 
 ; Add perfume to a technology to change how valuable the AI judges the tech to be. Each point of perfume is worth roughly one gold in trade, and also
-; affects what the AI chooses to research. The format matches production_perfume above, ex.: [Medicine: 500, Fascism: -1000, "Replacable Parts": 500].
+; affects what the AI chooses to research. The format matches production_perfume above, ex.: [Medicine: 500, Fascism: -50%, "Replacable Parts": 20%].
 technology_perfume = []
 
 ; Add perfume to a government to encourage or discourage the AI from switching to that type. The format follows the other perfume options, ex.:
-; [Republic: 300, Fascism: -300]. Unfortunately I don't know how much each point is worth in this context. I also don't know how perfuming governments
+; [Republic: 10%, Fascism: -30%]. Unfortunately I don't know how much each point is worth in this context. I also don't know how perfuming governments
 ; affects the AI's willingness to overthrow its current govt. The perfume for sure applies when the AI is selecting a new govt type after anarchy.
 government_perfume = []
 
